Fixed name overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@ body {
     overflow-x:hidden;
 }
 
+
 footer,header {
 	width: 100%;
 	color: #fff;
@@ -18,7 +19,7 @@ footer a,header a{
 }
 
 header{
-	
+	min-width: 387px;
 	position: fixed;    
 	z-index: 100;
 	margin-top: -5px;
@@ -45,6 +46,10 @@ footer img{
 	width: 30px;
 	height: 30px;
 	background-color: transparent;
+}
+
+.white{
+	background-color: #fff;
 }
 
 .cart{
@@ -241,6 +246,7 @@ footer img{
 	margin: 27px;
 	float: left;
 	text-align: center;
+	overflow :hidden; 
 }
 
 .goods-img{
@@ -263,7 +269,12 @@ footer img{
 .goods-text{
 	margin-right: 10px;
 	margin-left: 10px;
-	text-overflow: ellipsis;
+}
+
+.goods-text p{
+	max-height: 19px;
+	white-space:pre-wrap;
+	overflow: hidden;
 }
 
 .sales{
